--- a/index.html
+++ b/index.html
@@ -1,74 +1,159 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Monitoring Cuaca Otomatis</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dashboard Cuaca Otomatis</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 30px;
-      background: #f0f4f8;
+      margin: 0;
+      padding: 20px;
+      background-color: #f0f4f8;
+      transition: background-color 0.3s, color 0.3s;
     }
-    h1 {
-      text-align: center;
-    }
-    #weather {
-      margin-top: 30px;
-      text-align: center;
+    .container {
+      max-width: 600px;
+      margin: auto;
       background: white;
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
+      animation: fadeIn 1s ease-in-out;
     }
-    input {
-      padding: 8px;
-      margin-right: 10px;
+    h1 {
+      text-align: center;
+      animation: slideInDown 0.8s ease-out;
     }
-    button {
-      padding: 8px 15px;
+    select, button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      transition: all 0.3s ease;
+    }
+    select:hover, button:hover {
+      transform: scale(1.02);
+    }
+    #weather {
+      text-align: center;
+      margin-top: 20px;
+      animation: fadeIn 1s ease-in-out;
+    }
+    canvas {
+      margin-top: 30px;
+      animation: fadeIn 1.5s ease-in-out;
+    }
+    .dark {
+      background-color: #121212;
+      color: white;
+    }
+    .dark .container { background-color: #1e1e1e; }
+    .dark select, .dark button {
+      background-color: #333;
+      color: white;
+      border: none;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes slideInDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-
-  <h1>Monitoring Cuaca Otomatis</h1>
-  
-  <div style="text-align:center;">
-    <input type="text" id="cityInput" placeholder="Masukkan nama kota">
-    <button onclick="getWeather()">Cek Cuaca</button>
-  </div>
-
-  <div id="weather">
-    <p>Data cuaca akan muncul di sini...</p>
+  <div class="container">
+    <h1>Dashboard Cuaca Otomatis</h1>
+    <select id="cityInput">
+      <option value="Jakarta">Jakarta</option>
+      <option value="Bandung">Bandung</option>
+      <option value="Surabaya">Surabaya</option>
+      <option value="Yogyakarta">Yogyakarta</option>
+      <option value="Denpasar">Denpasar</option>
+    </select>
+    <button onclick="getWeather()">Tampilkan Cuaca</button>
+    <button onclick="toggleDarkMode()">🌓 Dark Mode</button>
+    <div id="weather">
+      <p>Data cuaca akan ditampilkan di sini...</p>
+    </div>
+    <canvas id="tempChart"></canvas>
   </div>
 
   <script>
     const apiKey = '2fcb79fa30ceb8a4324562df6c0c692a';
+    let cityName = '';
+    let tempData = [];
+    let timeLabels = [];
 
-    async function getWeather() {
-      const city = document.getElementById('cityInput').value;
-      const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&appid=${apiKey}&lang=id`;
-
-      const response = await fetch(url);
-      const data = await response.json();
-
-      if (data.cod === 200) {
-        document.getElementById('weather').innerHTML = `
-          <h2>Cuaca di ${data.name}</h2>
-          <p><strong>${data.weather[0].description}</strong></p>
-          <p>Suhu: ${data.main.temp}°C</p>
-          <p>Kelembaban: ${data.main.humidity}%</p>
-          <p>Angin: ${data.wind.speed} m/s</p>
-        `;
-      } else {
-        document.getElementById('weather').innerHTML = `<p>Kota tidak ditemukan. Coba lagi.</p>`;
+    const ctx = document.getElementById('tempChart').getContext('2d');
+    const tempChart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: timeLabels,
+        datasets: [{
+          label: 'Suhu (°C)',
+          data: tempData,
+          borderColor: 'rgb(75, 192, 192)',
+          tension: 0.3
+        }]
+      },
+      options: {
+        responsive: true,
+        scales: {
+          x: { title: { display: true, text: 'Waktu' } },
+          y: { title: { display: true, text: 'Suhu (°C)' } }
+        }
       }
-    }
-  </script>
+    });
 
+    function getWeather() {
+      const input = document.getElementById('cityInput').value;
+      if (input) cityName = input;
+      if (!cityName) return;
+
+      const url = `https://api.openweathermap.org/data/2.5/weather?q=${cityName}&units=metric&appid=${apiKey}&lang=id`;
+
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          if (data.cod === 200) {
+            const suhu = data.main.temp;
+            const waktu = new Date().toLocaleTimeString();
+
+            document.getElementById('weather').innerHTML = `
+              <h2>Cuaca di ${data.name}</h2>
+              <p><strong>${data.weather[0].description}</strong></p>
+              <p>Suhu: ${suhu}°C</p>
+              <p>Kelembaban: ${data.main.humidity}%</p>
+              <p>Angin: ${data.wind.speed} m/s</p>
+              <p><small>Update: ${waktu}</small></p>
+            `;
+
+            if (tempData.length >= 10) {
+              tempData.shift();
+              timeLabels.shift();
+            }
+            tempData.push(suhu);
+            timeLabels.push(waktu);
+            tempChart.update();
+          } else {
+            document.getElementById('weather').innerHTML = `<p>Kota tidak ditemukan.</p>`;
+          }
+        });
+    }
+
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+    }
+
+    setInterval(() => {
+      if (cityName) getWeather();
+    }, 60000);
+
+    window.onload = () => getWeather();
+  </script>
 </body>
 </html>
