--- a/index.html
+++ b/index.html
@@ -5,61 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard Cuaca Otomatis</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin: 0;
-      padding: 20px;
-      background-color: #f0f4f8;
+      padding: 30px;
+      background: linear-gradient(to right, #ece9e6, #ffffff);
+      color: #333;
       transition: background-color 0.3s, color 0.3s;
     }
     .container {
       max-width: 600px;
       margin: auto;
       background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
       animation: fadeIn 1s ease-in-out;
     }
     h1 {
       text-align: center;
-      animation: slideInDown 0.8s ease-out;
+      color: #1e90ff;
+      font-weight: bold;
     }
     select, button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      font-size: 16px;
       transition: all 0.3s ease;
     }
     select:hover, button:hover {
-      transform: scale(1.02);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-    #weather {
-      text-align: center;
-      margin-top: 20px;
-      animation: fadeIn 1s ease-in-out;
-    }
-    canvas {
-      margin-top: 30px;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-    .dark {
-      background-color: #121212;
-      color: white;
-    }
-    .dark .container { background-color: #1e1e1e; }
-    .dark select, .dark button {
-      background-color: #333;
+    button {
+      background-color: #1e90ff;
       color: white;
       border: none;
     }
+    button:active {
+      transform: scale(0.98);
+    }
+    #weather {
+      margin-top: 20px;
+      background: #f9f9f9;
+      border-radius: 12px;
+      padding: 15px;
+      text-align: center;
+    }
+    canvas {
+      margin-top: 30px;
+    }
+    .dark {
+      background-color: #0d1117;
+      color: #f0f6fc;
+    }
+    .dark .container {
+      background-color: #161b22;
+    }
+    .dark select, .dark button {
+      background-color: #238636;
+      color: white;
+      border: none;
+    }
+    .dark #weather {
+      background-color: #21262d;
+    }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    @keyframes slideInDown {
-      from { opacity: 0; transform: translateY(-30px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
@@ -73,6 +91,12 @@
       <option value="Surabaya">Surabaya</option>
       <option value="Yogyakarta">Yogyakarta</option>
       <option value="Denpasar">Denpasar</option>
+      <option value="Medan">Medan</option>
+      <option value="Makassar">Makassar</option>
+      <option value="Palembang">Palembang</option>
+      <option value="Semarang">Semarang</option>
+      <option value="Pontianak">Pontianak</option>
+      <option value="Balikpapan">Balikpapan</option>
     </select>
     <button onclick="getWeather()">Tampilkan Cuaca</button>
     <button onclick="toggleDarkMode()">🌓 Dark Mode</button>
@@ -97,7 +121,9 @@
           label: 'Suhu (°C)',
           data: tempData,
           borderColor: 'rgb(75, 192, 192)',
-          tension: 0.3
+          backgroundColor: 'rgba(75, 192, 192, 0.2)',
+          tension: 0.3,
+          fill: true,
         }]
       },
       options: {
