--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <option value="Semarang">Semarang</option>
       <option value="Pontianak">Pontianak</option>
       <option value="Balikpapan">Balikpapan</option>
+      <option value="Bekasi">Bekasi</option>
     </select>
     <button onclick="getWeather()">Tampilkan Cuaca</button>
     <button onclick="toggleDarkMode()">🌓 Dark Mode</button>
